会場を株式会社インプレスに更新

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <!-- Two -->
         <section id="two">
             <div class="container">
-                <h2>第２回Git勉強会</h2>
+                <span style="font-size:128px;">第２回Git勉強会</span>
                 <div class="features">
-                    <p>第２回Git勉強会を開催します。みなさま、是非ご参加ください！</p>
+                    <large>第２回Git勉強会を開催します。みなさま、是非ご参加ください！</large>
                     <article>
                         <h3>イベント日時・場所</h3>
                         <p>3月23日 19:00開始</p>
-                        <p><big>株式会社インプレス イベントセミナー会場<big></p>
+                        <p><big>株式会社インプレス イベントセミナー会場</big></p>
                     </article>
                     <article>
                         <h3>スピーカー</h3>
@@ -113,6 +113,7 @@
                             </table>
                         </div>
                     </article>
+                </div>    
                 </div>
             </div>
         </section>
