文字をでっかくした

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
         <!-- Two -->
         <section id="two">
             <div class="container">
-                <span style="font-size:128px;">第２回Git勉強会</span>
+                <span style="font-size:128px;">第２回Git勉強会
+
                 <div class="features">
                     <large>第２回Git勉強会を開催します。みなさま、是非ご参加ください！</large>
                     <article>
                         <h3>イベント日時・場所</h3>
                         <p>3月23日 19:00開始</p>
-                        <p><big>株式会社インプレス イベントセミナー会場</big></p>
+                        <p>株式会社インプレス イベントセミナー会場</p>
                     </article>
                     <article>
                         <h3>スピーカー</h3>
@@ -113,6 +114,7 @@
                             </table>
                         </div>
                     </article>
+                </span>
                 </div>    
                 </div>
             </div>
