--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <!-- Two -->
         <section id="two">
             <div class="container">
-                <span style="font-size:128px;">第２回Git勉強会
+                <header class="major">
+                    <h2>第２回Git勉強会</h2>
+                </header>
 
                 <div class="features">
                     <large>第２回Git勉強会を開催します。みなさま、是非ご参加ください！</large>
@@ -61,17 +63,20 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
+                            <!--TODO：プロフィール画像を受け取ったら-->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>1人目: いろふさん</h4>
+                                <p>大阪を中心に仕事をしている普通のプログラマです。</p>
+                                <p>主に業務webアプリの開発をしてきました</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>2人目: うらがみさん</h4>
+                                <p>大阪のプログラマーです。「GitHubを日常的に利用しています、</p>
+                                <p>位置年間毎日コミットしてプロフィールページのcontributionsを緑一色にしたことがあります</p>
                             </div>
                         </div>
                     </article>
@@ -114,7 +119,6 @@
                             </table>
                         </div>
                     </article>
-                </span>
                 </div>    
                 </div>
             </div>
