セッション情報を更新

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Two -->
         <section id="two">
             <div class="container">
-                <span style="font-size:128px;">第２回Git勉強会
+                <span>第２回Git勉強会
 
                 <div class="features">
                     <large>第２回Git勉強会を開催します。みなさま、是非ご参加ください！</large>
@@ -92,7 +92,7 @@
                                 </tr>
                                 <tr>
                                     <td>19:05〜19:50</td>
-                                    <td>セッション1: 未定</td>
+                                    <td>わたしのGitの使い方（いろふさん）</td>
                                 </tr>
                                 <tr>
                                     <td>19:50〜20:00</td>
@@ -100,7 +100,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>セッション2: 未定</td>
+                                    <td>現場で使える！実践Git（うらがみさん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
