--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
-                            <img src="images/speaker1.png" alt="" class="image"/>
+                            <img src="images/speaker1.bmp" alt="" class="image"/>
                             <div class="inner">
                                 <h4>1人目: 未定</h4>
                                 <p>1人目のプロフィール</p>
                             </div>
                         </div>
                         <div class="speaker">
-                            <img src="images/speaker2.png" alt="" class="image"/>
+                            <img src="images/speaker2.bmp" alt="" class="image"/>
                             <div class="inner">
                                 <h4>2人目: 未定</h4>
                                 <p>2人目のプロフィール</p>
